--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -68,22 +68,35 @@ Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 
 
 
 \begin{itemize}
-\item Desarrollo de fuente de alto voltaje.
+\item Desarrollo de fuente de bajo voltaje.
 \begin{itemize}
-\item Diseño de fuente de voltaje a 12V, 180W.
-\item Simulación de fuente de voltaje a 12V.
-\item Maquinado de fuente de voltaje 12V.
+\item Diseño de fuente de voltaje regulable a 180W.
+\item Simulación de fuente de voltaje regulable.
+\item Maquinado de fuente de voltaje regulable.
+\end{itemize}
+\end{itemize}
+
+
+\begin{itemize}
+\item Inversor de voltaje.
+\begin{itemize}  
 \item Diseño de driver modulador de ancho de pulso (PWM) bipolar para inversor.
 \item Simulación de driver generador de PWM.
 \item Construcción de driver (PWM) bipolar.
 \item Diseño de interfaces gráficas para control de inversor.
-\item Mediciones y comparaciones entre fuentes comerciales.
-\item Análisis de costos.
+\end{itemize} 
 \end{itemize}  
+
+\begin{itemize}
+\item Etapa de alto voltaje.
+\begin{itemize}
+\item Transformadores de alto voltaje.
+\item Multiplicador de voltaje.
+\end{itemize}
 \end{itemize}
 
 \subsection{Hipótesis}
-El diseño adecuando de un sistema de generación de alto voltaje nos permite llevar acabo experimentos, con el cual se podrá desarrollar tecnología aplicada en esta área.
+El diseño adecuado de un sistema de generación de alto voltaje regulable nos permite avanzar en el desarrollo de un acelerador de partículas lineal en nuestra universidad,con el cual se podrá desarrollar investigación y tecnología en dichos temas.
 
 \newpage
 
