--- a/tesis.tex
+++ b/tesis.tex
@@ -116,7 +116,7 @@ Juan Francisco Verdugo Arredondo
 
 \begin{normalsize}
 DIRECTOR:\\
-Dr. Carlos Duarte galván\\
+Dr. Carlos Duarte Galván\\
 Dr. Cristhian Alfonso Valerio Lizarraga\\
 \end{normalsize}
 
@@ -176,8 +176,8 @@ Culiacán, Sinaloa, 2019
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                   APÉNDICES                       %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\appendix
-%\include{Apendice1/Apendice1}               % Colocar los circuitos, manuales, código fuente, pruebas de teoremas, etc.
+\appendix
+\include{Apendice1/Apendice1}               % Colocar los circuitos, manuales, código fuente, pruebas de teoremas, etc.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                   REFERENCIAS                     %
@@ -193,41 +193,40 @@ Culiacán, Sinaloa, 2019
 
 %\include{referencia2}% Archivo .bib
 \begin{thebibliography}{2}
-  \bibitem{ProyectoLNLS5} Línea de luz Sincrotrón en México
-Acelerador lineal de electrones. \url{https://www.fis.cinvestav.mx/~sincrotron/downloads/ProyectoLNLS5.pdf}
-
-\bibitem{ININ}Instituto Nacional de Investigaciones Nucleares. FUSIÓN NUCLEAR. \url{http://www.inin.gob.mx/temasdeinteres/fusionnuclear.cfm}
+  \bibitem{ProyectoLNLS5} Aplicación de Microscopia Electrónica y Radiación
+Sincrotrón al Estudio de Materiales y Procesos
+Avanzados para la Salud y la Estética Dental. \url{http://grupsderecerca.uab.cat/gts/sites/grupsderecerca.uab.cat.gts/files/Tesis\%20POA.pdf}
 
 \bibitem{const}fundamental physical constants. \url{https://physics.nist.gov/cgi-bin/cuu/Value?tevj}
-
 
 \bibitem{IPC 2152}Standard for Determining Current-Carrying Capacity In Printed Board Design. \url{http://electronica.ugr.es/~amroldan/cursos/2014/pcb/modulos/temas/IPC2152.pdf}
 
 \bibitem{transformador}Trasformadores. Miguel Angel Rodríguez Pozueta
 Doctor Ingeniero Industrial \url{http://personales.unican.es/rodrigma/PDFs/Trafos.pdf}
 
-\bibitem{rectificador}Rectificador de onda completa. Prof. Julima Anato \url{http://paginas.fisica.uson.mx/horacio.munguia/aula_virtual/Cursos/Instrumentacion\%20I/Documentos/Circuitos_Rectificadores.pdf}
+\bibitem{rectificador}Full-bridge inverter phase-shifted PWM (FBPS-PWM) zero voltage switching (ZVS) and high frequency transformer as part of DC-DC converter 311/100V 300W. F. Danang Wijaya \url{https://ieeexplore.ieee.org/document/7045266}
 
-\bibitem{CERN}Multiplicador de voltaje utilizado en CERN en el año 1964. \url{http://cds.cern.ch/record/43889}
+
+\bibitem{CERN}Design concept of a high power high frequency power supply for feeding 500 kV, 100 mA cockcroft-walton generator. \url{https://ieeexplore.ieee.org/document/8310445}
+
+\bibitem{fusion}Application of Magnetic Energy Recovery Switch (MERS) to power supply systems of nuclear fusion device. \url{https://ieeexplore.ieee.org/document/5226371}
+
+\bibitem{fusor}Kent Farnsworth on His Father's Electronic Television and Fusion Research. \url{https://ieeexplore.ieee.org/document/4563911}
+
+\bibitem{imfusor}Imagen de fusor nuclear. \url{https://makezine.com/projects/make-36-boards/nuclear-fusor/}
+
+\bibitem{ignicion}ANÁLISIS DE INSTALACIÓN Y OPERACIÓN DE UN
+SISTEMA DE ENCENDIDO SIN DISTRIBUIDOR (DIS) \url{https://repositorio.espe.edu.ec/bitstream/21000/3995/1/T-ESPEL-0212.pdf}
+
+
 
 \bibitem{ibt}Esquematico de control BTN7970. \url{https://www.elecrow.com/download/IBT-2\%20Schematic.pdf}
 
+\bibitem{databts}BTS 7960 High Current PN Half Bridge NovalithIC. \url{http://www.robotpower.com/downloads/BTS7960_v1.1_2004-12-07.pdf}
+
 \bibitem{settime}Función de velocidad para comunicación serial. \url{https://www.arduino.cc/en/Reference/StreamSetTimeout}
 
-\bibitem{acelerado}ACELERADORES DE PARTICULAS. Dr. EDUARDO ANDRADE \url{http://www.nucleares.unam.mx/\~bijker/emfn/Andrade.pdf}
 
-\bibitem{ignicion}``ANÁLISIS DE INSTALACIÓN Y OPERACIÓN DE UN
-SISTEMA DE ENCENDIDO SIN DISTRIBUIDOR (DIS)'' \url{https://repositorio.espe.edu.ec/bitstream/21000/3995/1/T-ESPEL-0212.pdf}
-
-\bibitem{fusor}University of Utah Marriott Library Special Collections. Archived from the original on 2013-10-21. Retrieved 2007-07-05. \url{https://wayback.archive-it.org/all/20131021170353/http://content.lib.utah.edu/cdm/ref/collection/UU_EAD/id/2160}
-
-\bibitem{fusion}FUSIÓN NUCLEAR. \url{http://www.inin.gob.mx/temasdeinteres/fusionnuclear.cfm}
-
-\bibitem{librotra}Transformadores de distribución: teoría, cálculo, construcción y pruebas. \url{https://books.google.com.mx/books?id=_m_I-NT38_UC&dq=teoria+electromagnetica+transformadores&hl=es&source=gbs_navlinks_s}
-
-\bibitem{fara}Biografia Michael Faraday. \url{http://dcb.fi-c.unam.mx/CoordinacionesAcademicas/FisicaQuimica/ElectricidadMagnetismo/biografias/5\%20Michael\%20Faraday.pdf}
-
-\bibitem{databts}BTS 7960 High Current PN Half Bridge NovalithIC. \url{http://www.robotpower.com/downloads/BTS7960_v1.1_2004-12-07.pdf}
 
 
 
