--- a/Capitulo3/diseno_experimento.tex
+++ b/Capitulo3/diseno_experimento.tex
@@ -10,7 +10,7 @@ En este capítulo se expone todo el desarrollo de la fuente de alto voltaje en c
 
 El sistema esta compuesto por dos partes, hardware y firmware, el hardware se compone de tres partes como vemos en la figura 3.5: parte digital de control, inversor de voltaje y rectificador multiplicador. \\
 
-Por otro lado el firmware consiste en los programas que realizan el control completo de la generación de alto voltaje por medio del desarrollo de un ambiente gráfico al que el usuario tiene acceso,  control para la medición de voltajes, corrientes y protecciones necesarias para el correcto funcionamiento del sistema en general, así como también un control para el inversor de voltaje, mediante la implementación de un ADC ( Analog to Digital Converter) a la salida de una devanado de baja en el transformador de alto voltaje el cual controla la salida de alto voltaje. Observemos de manera gráfica la topología del sistema en la figura 3.5. 
+Por otro lado el firmware consiste en los programas que realizan el control completo de la generación de alto voltaje por medio del desarrollo de un ambiente gráfico al que el usuario tiene acceso,  control para la medición de voltajes, corrientes y protecciones necesarias para el correcto funcionamiento del sistema en general, así como también un control para el inversor de voltaje, mediante la implementación de un ADC ( Analog to Digital Converter) a la salida de una devanado de baja en el transformador de alto voltaje el cual controla la salida de alto voltaje.
 \newpage
 
 
@@ -38,19 +38,19 @@ La medición y comprobación del alto voltaje no es tan sencilla si no se tienen
 \caption{Sonda de alto voltaje}
 \end{figure}
 
-Con esta herramienta se ha logrado utilizar el osciloscopio y analizar la señal para presentar resultados mas claros. Podemos observar el osciloscopio utilizado para las mediciones y un multimetro fluke, los cuales son suficientes para determinar la eficiencia de nuestra fuente de voltaje. Teniendo en cuenta siempre la seguridad requerida para la operación de estos instrumentos.
+Con esta herramienta se ha logrado utilizar el osciloscopio con una resolución de 8 bits, de la marca TELEDYNE modelo WavePro y analizar la señal para presentar resultados mas claros. Podemos observar el osciloscopio utilizado para las mediciones y un multimetro de la marca fluke, los cuales son suficientes para determinar la eficiencia de nuestra fuente de voltaje. Teniendo en cuenta siempre la seguridad requerida para la operación de estos instrumentos.
 
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=4cm]{Capitulo3/figs/multim.png}
-\caption{Multimetro utilizado en experimento}
+\caption{Multimetro Fluke 116 0.001V de resolución.}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=9cm]{Capitulo3/figs/oscilo.png}
-\caption{Osciloscopio utilizado en experimento}
+\caption{Osciloscopio teledyne lecroy 8 bits de resolución.}
 \end{figure}
 
 Para la fabricación de los PCB se utilizó una herramienta LPKF, router computarizado. El cual, una vez hecho el diseño en el programa EAGLE se prosiguió a la generación de los archivos gerber para su posterior maquinación. 
@@ -58,7 +58,7 @@ Para la fabricación de los PCB se utilizó una herramienta LPKF, router computa
 \begin{figure}[H]
 \centering
 \includegraphics[width=9cm]{Capitulo3/figs/proto.png}
-\caption{Router CNC}
+\caption{Router CNC LPKF para maquinado de PCBs.}
 \end{figure}
 \newpage
 
@@ -73,8 +73,7 @@ La figura 3.1 muestra un diagrama a bloques de la estructura general del hardwar
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=12
-cm]{Capitulo3/figs/diagrama.png}
+\includegraphics[width=12cm]{Capitulo3/figs/diagrama.png}
 \caption{Topología de fuente de alto voltaje}
 \end{figure}
 \newpage
@@ -84,8 +83,7 @@ Para el desarrollo de la interface gráfica se a utilizado un microcontrolador A
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=9
-cm]{Capitulo3/figs/pantalla0.jpg}
+\includegraphics[width=9cm]{Capitulo3/figs/pantalla0.jpg}
 \caption{LCD-TFT para interface gráfica}
 \end{figure}
 \newpage
@@ -150,7 +148,7 @@ Para el inversor se ha implementado una topología del tipo puente H, ya que es 
 
 
 \subsection{Multiplicador de voltaje Cockroft Walton}
-Mediante el motor de simulación de LTSPICE se ha realizado el diseño del multiplicador a utilizar. Contando con valores de capacitores de 0.1 $\mu$-Faradios, diodos MUR4100, voltaje de entrada de 1KV y una frecuencia variable de 10KHZ. Podemos observar en la figura 3.9 el diseño planteado, con la finalidad de tener un punto de referencia al momento de realizar el experimento. Se busca tener un riso menor al 1\% del voltaje de salida y tomaremos la simulación como punto de partida para la construcción del multiplicador. \\
+Mediante el motor de simulación de LTSPICE se ha realizado el diseño del multiplicador a utilizar. Contando con valores de capacitores de 0.1 $\mu$-Faradios, diodos MUR4100, voltaje de entrada de 1KV y una frecuencia variable de 10KHZ. Podemos observar en la figura 3.9 el diseño planteado, con la finalidad de tener un punto de referencia al momento de realizar el experimento. Se busca tener un rizo menor al 1\% del voltaje de salida y tomaremos la simulación como punto de partida para la construcción del multiplicador. \\
 
 \begin{figure}[H]
 \centering
@@ -185,7 +183,7 @@ Para una carga con una exigencia de 10 mA podemos observar la figura 3.16. Tenem
 \caption{Multiplicador de voltaje con 10 mA de carga}
 \end{figure}
 
-Tenemos un voltaje $V_{1mA}=3.9KV$, $V_{10mA}=3.2KV$ y $V_{NL}=4KV$ ahora utilizando la ecuación 2.7 podemos calcular la eficiencia de nuestra fuente y utilizar este punto de referencia para la construcción de nuestro proyecto. Para una carga de 1 mA tenemos $VR_{1mA}=2.5\%$ Y para una carga de 10 mA $VR_{10mA}=20\%$ valor límite para nuestro circuito.\\
+Tenemos un voltaje $V_{1mA}=3.9KV$, $V_{10mA}=3.2KV$ y $V_{NL}=4KV$ ahora utilizando la ecuación 2.7 podemos calcular la eficiencia de nuestra fuente y utilizar este punto de referencia para la construcción de nuestro proyecto. Para una carga de 1 mA tenemos $VR_{1mA}=2.5\%$ Y para una carga de 10 mA $VR_{10mA}=20\%$ valor límite para nuestro circuito. Caidas de voltaje aceptables para nuestros propósitos.\\
 
 Hasta aquí podemos capturar los siguientes datos importantes, para una carga de 1 mA tenemos una caída de voltaje de 100V y para una carga de 10 mA se tiene una caída de 800V, estos valores son muy grandes, es por ello que se tendrán que ajustar mediante un circuito de retroalimentación. 
 \newpage
@@ -247,53 +245,7 @@ char current[20];
 Como vemos se ha utilizado la función setTimeout, configuración de la comunicación serial, necesaria en el proyecto para mantener una medición de datos sin riesgos a perdida de informacion debido a los subprocesos que se realizan dentro del firmware diseñado. SetTimeout() establece los milisegundos máximos para esperar los datos de transmisión, por defecto es de 1000 milisegundos. Esta función es parte de la clase Stream y es llamada por cualquier clase que hereda de ella (Wire, Serial, etc.). \cite{settime}\\
 
 
-Todo el código esta dividido en funciones, las cuales llamamos en nuestro LOOP, tratando siempre de cumplir con las siguientes características: no utilización de la función delay, no utilización de ciclos que dependa de alguna condición externa, utilizar el menor código posible para una acción. Las funciones que se utilizaron para la el despliegue de información de la primera pantalla fue el siguiente:
-
-
-\begin{verbatim}
-
- 
-void botones1(){ 
-  myGLCD.setFont(BigFont); 
-  for (x=0; x<3; x++)
-  {
-  
-    myGLCD.setColor(0, 0, 255);
-    myGLCD.fillRoundRect (200, 10+(x*55), 310, 60+(x*55));
-    myGLCD.setColor(255, 255, 255);
-    myGLCD.drawRoundRect (200, 10+(x*55), 310, 60+(x*55));
-  }
-for (x=0; x<2; x++)
-  {
-  
-    myGLCD.setColor(0, 0, 255);
-    myGLCD.fillRoundRect (10+(x*155), 175, 155+(x*155), 225);
-    myGLCD.setColor(255, 255, 255);
-    myGLCD.drawRoundRect (10+(x*155), 175, 155+(x*155), 225);
-  }
-  
-  myGLCD.setBackColor(0, 0, 255);
-  myGLCD.print("ON 2", 220 , 30);
-  myGLCD.print("ON 3", 220 , 85);
-  myGLCD.print("ON 1", 220 , 140);
-  //myGLCD.print("UART ON", 185 , 195);
-  myGLCD.print("V SET", 40 , 190);
-  myGLCD.print("CONFIG", 190 , 190);
-  }
-  
-void marco1(int x1, int y1, int x2, int y2){ 
-
-  myGLCD.setColor(255, 0, 0);
-  myGLCD.drawRoundRect (x1, y1, x2, y2);
-  
-  while (myTouch.dataAvailable())
-  myTouch.read();
-  myGLCD.setColor(255, 255, 255);
-  myGLCD.drawRoundRect (x1, y1, x2, y2);
-}
-\end{verbatim}
-
-Mediante el código anterior podemos, con ciertas variables, dibujar nuestra área de trabajo en la pantalla, obteniendo como resultado el dibujo de la figura 3.19.
+Todo el código esta dividido en funciones, las cuales llamamos en nuestro LOOP, tratando siempre de cumplir con las siguientes características: no utilización de la función delay, no utilización de ciclos que dependa de alguna condición externa, utilizar el menor código posible para una acción. podemos observar el resultado de nuestro desarrollo en las imagenes 3.18 y 3.19.\\
 
 \begin{figure}[H]
 \centering
@@ -301,362 +253,19 @@ Mediante el código anterior podemos, con ciertas variables, dibujar nuestra ár
 \caption{Pantalla 1}
 \end{figure}
 
-Mediante esta configuración de dibujo partimos para el código de configuración del TOUCH para lo que llamamos la ``pantalla 1''.
-
-\begin{verbatim}
-void touch1(){ 
-      myTouch.read();
-      x=myTouch.getX();
-      y=myTouch.getY();
-      if((x>=200) && (x<=310))
-      {
-        if((y>=10) && (y<=60)){ //boton ON 2
-          marco1(200,10,310,60);
-        }
-        
-        if((y>=65) && (y<=115)){ //boton ON 3
-          marco1(200,65,310,115);
-        }
-        
-        if((y>=120) && (y<=170)){ //boton ON 1
-          marco1(200,120,310,170);
-        }
-      }
-      
-      if((y>=175) && (y<=225))
-      {
-        if((x>=10) && (x<=155)){ //boton V SET
-        
-          marco1(10,175,155,225);
-          pantalla =2;
-        }
-      
-        if((x>=165) && (x<=310)){ //boton config
-        
-          marco1(165,175,310,225);
-        }
-}
-}
-\end{verbatim}
-
-Observamos que el despliegue de estas funciones solo están conformadas por elementos ``if'' y el llamado a funciones descritas por nosotros se despliegan de la misma manera, resaltando esto debido a que se desarrollo un código lo mas eficientemente posible en cuestión de tiempos de ejecución. \\
-
-Dividimos el dibujo de la ``pantalla 2'' y las funciones para el touch de la pantalla dos en los siguientes codigos:\\
-
-Funciones dibujo pantalla 2
-
-\begin{verbatim}
-void botones2(){
-  myGLCD.setBackColor(0,0,255);
-  for (x=0; x<4; x++) //botones +
-  {
-  
-    myGLCD.setColor(0, 0, 255);
-    myGLCD.fillRoundRect (10+(x*60), 10, 60+(x*60), 60);
-    myGLCD.setColor(255, 255, 255);
-    myGLCD.drawRoundRect (10+(x*60), 10, 60+(x*60), 60);
-    myGLCD.print("+", 27+(x*60), 27);
-  }
-  for (x=0; x<4; x++) //botones -
-  {
-  
-    myGLCD.setColor(0, 0, 255);
-    myGLCD.fillRoundRect (10+(x*60), 170, 60+(x*60), 220);
-    myGLCD.setColor(255, 255, 255);
-    myGLCD.drawRoundRect (10+(x*60), 170, 60+(x*60), 220);
-    myGLCD.print("-", 27+(x*60), 190);
-  }
-
-  for (x=0; x<4; x++) //blanco 
-  {
-  
-    myGLCD.setColor(255, 255, 255);
-    myGLCD.fillRoundRect (10+(x*60), 70, 60+(x*60), 160);
-    myGLCD.setColor(255, 0, 0);
-    myGLCD.drawRoundRect (10+(x*60), 70, 60+(x*60), 160);
-  }
-
-  myGLCD.setColor(0, 0, 255); /// boton set
-   myGLCD.fillRoundRect(250,70,310,160);
-   myGLCD.setColor(255, 255, 255);
-   myGLCD.drawRoundRect(250,70,310,160);
-   myGLCD.print("set" , 255,105);
-  }
-\end{verbatim}
-
-Podemos observar el resultado del dibujo en la figura 3.19.
-
 \begin{figure}[H]
 \centering
 \includegraphics[width=9cm]{Capitulo3/figs/pantalla2.jpg}
 \caption{Pantalla 2}
 \end{figure}
 
- Funciones TOUCH ``pantalla 2'':
-\begin{verbatim}
-void touch2(){
-      myTouch.read();
-      x=myTouch.getX();
-      y=myTouch.getY();
+Una vez que definimos las funciones a utilizar para estas dos primeras pantallas proseguimos a las funciones de cálculos y procesamiento de datos. Para ello hemos creado una función capaz de configurar el voltaje de salida, manteniendo una comunicación UART hacia un micro-controlador. \\
 
-      if((y>=10) && (y<=60)){ /////////////botones +
-        if((x>=10) && (x<=60)){ //boton + kilos
-        
-          marco1(10,10,60,60);
-          myGLCD.setFont(SevenSegNumFont); 
-          suma(1,0,0,0,0,0);
-        }
-        if((x>=70) && (x<=120)){ //boton + centena
-        
-          marco1(70,10,120,60);
-          suma(0,1,0,0,0,0);
-        }
-        if((x>=130) && (x<=180)){ //boton + decena
-        
-          marco1(130,10,180,60); 
-          suma(0,0,1,0,0,0);
-          
-        }
-        if((x>=190) && (x<=240)){ //boton + unidad
-        
-          marco1(190,10,240,60);
-          suma(0,0,0,1,0,0);
-        }
-        }
-        if((y>=170) && (y<=220)){ ////////////botones -
-        if((x>=10) && (x<=60)){ //boton + kilos
-        
-          marco1(10,170,60,220);
-          suma(1,0,0,0,0,1);
-          
-        }
-        if((x>=70) && (x<=120)){ //boton + centena
-        
-          marco1(70,170,120,220);
-          suma(0,1,0,0,0,1);
-          
-        }
-        if((x>=130) && (x<=180)){ //boton + decena
-        
-          marco1(130,170,180,220);
-          suma(0,0,1,0,0,1);
-          
-        }
-        if((x>=190) && (x<=240)){ //boton + unidad
-        
-          marco1(190,170,240,220);
-          suma(0,0,0,1,0,1);
-        }
-        }
+Una segunda función es la encargada de recibir los datos procedentes del segundo micro-controlador, encargado de leer los datos de sensores y preparar el funcionamiento del inversor. \\
 
-        if((x>=250) && (x<=310)){ // boton SET
-
-          if((y>=70) && (y<=160)){
-          
-            marco1(250,70,310,160);
-            pantalla =1;
-            
-            if(vout >=0 && vout <=1000){
-            
-            Serial.println(vout);
-            }
-            }    
-        }
-    }
-    
-\end{verbatim}
-
-Una vez que definimos las funciones a utilizar para estas dos primeras pantallas proseguimos a las funciones de cálculos y procesamiento de datos. Para ello hemos creado una función capaz de configurar el voltaje de salida, manteniendo una comunicación UART hacia un micro-controlador. 
-
-\begin{verbatim}
-void suma(int x1,int x2,int x3,int x4, int k, int w){ 
-
-          myGLCD.setFont(SevenSegNumFont);
-          myGLCD.setColor(0, 0, 0);
-          myGLCD.setBackColor(255,255,255);
-          int q;  
-          
-          if(x1 == 1){//algoritmo kilos
-          
-            if(w==0 && p<9){
-            
-            vout=vout+1000;
-            p=p+1;
-            q=p*x1+p1*x2+p2*x3+p3*x4;
-            sprintf(dato,"%d",q)
-            }
-            
-            if(w==1 && p>0){
-            
-            vout=vout-1000;
-            p=p-1;
-            q=p*x1+p1*x2+p2*x3+p3*x4;
-            sprintf(dato,"%d",q);
-              }
-              
-            myGLCD.print(dato,20*x1+80*x2+140*x3+200*x4,90);
-          }
-          
-          if(x2 == 1){ //algoritmo centena
-          
-            if(w==0 && p1<9){
-            
-            vout=vout+100;
-            p1=p1+1;
-            q=p*x1+p1*x2+p2*x3+p3*x4;
-            sprintf(dato,"%d",q);
-            }
-            
-            if(w==1 && p1>0){
-            
-            vout=vout-100;
-            p1=p1-1;
-            q=p*x1+p1*x2+p2*x3+p3*x4;
-            sprintf(dato,"%d",q);
-              }
-              
-            myGLCD.print(dato,20*x1+80*x2+140*x3+200*x4,90);
-          }
-          
-          if(x3 == 1){//algoritmo decenas
-            if(w==0 && p2<9){
-            
-            vout=vout+10;
-            p2=p2+1;
-            q=p*x1+p1*x2+p2*x3+p3*x4;
-            sprintf(dato,"%d",q);
-            }
-           
-            if(w==1 && p2>0){
-            
-            vout=vout-10;
-            p2=p2-1;
-            q=p*x1+p1*x2+p2*x3+p3*x4;
-            sprintf(dato,"%d",q);
-              }
-            myGLCD.print(dato,20*x1+80*x2+140*x3+200*x4,90);
-            //Serial.println(vout);
-            
-          }
-          
-          if(x4 == 1){//algoritmo unidades
-            if(w==0 && p3<9){
-            
-            vout=vout+1;
-            p3=p3+1;
-            q=p*x1+p1*x2+p2*x3+p3*x4;
-            sprintf(dato,"%d",q);
-            
-            }
-            if(w==1 && p3>0){
-            
-            vout=vout-1;
-            p3=p3-1;
-            q=p*x1+p1*x2+p2*x3+p3*x4;
-            sprintf(dato,"%d",q);
-              
-              }
-            myGLCD.print(dato,20*x1+80*x2+140*x3+200*x4,90);
-          }
-          
-          if(k==1){
-          
-            for(x=0 ; x<4 ; x++){
-            
-              sprintf(dato,"%d",p);
-              myGLCD.print(dato,20,90);
-              sprintf(dato,"%d",p1);
-              myGLCD.print(dato,80,90);
-              sprintf(dato,"%d",p2);
-              myGLCD.print(dato,140,90);
-              sprintf(dato,"%d",p3);
-              myGLCD.print(dato,200,90);
-              
-              }
-            }
-    }
-\end{verbatim}
-
-Una segunda función es la encargada de recibir los datos procedentes del segundo micro-controlador, encargado de leer los datos de sensores y preparar el funcionamiento del inversor. 
-
-\begin{verbatim}
-void vinput(){
-      str = Serial.readStringUntil('\n');
-      
-      for (int i = 0; i < dataLength ; i++)
-      {
-         int index = str.indexOf(separator);
-         data[i] = str.substring(0, index).toInt();
-         str = str.substring(index + 1);
-      }
-      
-      for (int i = 0; i < sizeof(data) / sizeof(data[0]); i++)    
-      {
-      
-      Serial.print(data[i]); 
-      Serial.print('\t');} 
-      Serial.println();
-      
-                  myGLCD.setFont(BigFont);
-                  sprintf(vin, "%d",data[0]);
-                  sprintf(current, "%d", data[1]);
-                  myGLCD.print("     " ,10,50);
-                  myGLCD.print("     " ,10,70);
-                  myGLCD.setBackColor(0,0,0);
-                  myGLCD.setColor(255,255,255);
-                  myGLCD.print(vin ,10,50);
-                  myGLCD.print(current ,10,70);
-  }
-\end{verbatim}
 
 Mediante las funciones anteriores podemos mantener una comunicacion INPUT y OUTPUT mediante UART, con el segundo micro-controlador, y mantener un senseo de las variables necesarias para el correcto funcionamiento de la fuente de alto voltaje. Ahora mostramos en cuerpo del programa principal, encargado del control de cada una de las funciones anteriores.
 
-\begin{verbatim}
-void loop(){
-//pantalla 1
-if(pantalla == 1){
-
-    myGLCD.fillScr(VGA_BLACK);
-    botones1();
-    myGLCD.setFont(BigFont); 
-    char set[25];
-    sprintf(set, "%d",vout);
-    myGLCD.setBackColor(0,0,0);
-    myGLCD.print(set ,10,100);
-    myGLCD.print("V set" ,100,100);
-    myGLCD.print("V out" ,100,50);
-    myGLCD.print("mA out" ,100,70);
-    myGLCD.print(vin ,10,50);
-    myGLCD.print(current ,10,70);
-    
-    while(true)
-         {
-         
-        if(myTouch.dataAvailable())touch1();
-        if(pantalla == 2 )break;
-      	if (Serial.available()>0){vinput();}
-      
-            }
-            }
-        
-//pantalla 2
-if(pantalla == 2){
-
-  myGLCD.fillScr(VGA_BLACK);
-  botones2();
-  suma(0,0,0,0,1,0);
-  
-  while(true)
-    {
-    
-      if(myTouch.dataAvailable())touch2();
-      if(pantalla == 1)break;
-      
-    }
-    }
-    }
-\end{verbatim}
-\newpage
 \section{Implementación del Hardware}
 
 Una vez obtenido el diseño de todas las etapas, así como también la programación del firmware se prosigue a la fabricación de los PCB de la fuente de corriente directa a 180W, el acondicionamiento de la parte digital a la etapa de potencia. Se aisló mediante una caja que solo da acceso al usuario a la parte de salidas y entradas como vemos en la imagen 3.20 Evitando así riesgos al usuario. \\
@@ -672,7 +281,7 @@ Una vez terminado el Hardware se hicieron pruebas de cada modulo desarrollado, c
 
 \subsection{Fuente de 180W}
 
-Se ha terminado la maquinación de la fuente de voltaje en el router LPKF y realizado el ensamble. Se tienen 180 W que pueden ser peligrosos si no se tiene el cuidado necesario, es por ello que se ha optado de aislar el circuito y dejar solamente las salidas y entradas necesarias como podemos ver en la imagen 3.21.
+Se ha terminado la maquinación de la fuente de voltaje en el router LPKF y realizado el ensamble. Se tienen 180 W que pueden ser peligrosos si no se tiene el cuidado necesario, es por ello que se ha optado por aislar el circuito y dejar solamente las salidas y entradas necesarias como podemos ver en la imagen 3.21.
 
 \begin{figure}[H]
 \centering
@@ -680,39 +289,91 @@ Se ha terminado la maquinación de la fuente de voltaje en el router LPKF y real
 \caption{Multiplicador de voltaje sin carga}
 \end{figure}
 
-Se ha optado hacer pruebas a 12V y cargas de 7.5 OHMS, 15 OHMS y una prueba sin carga, esperando obtener el menor ruido posible. La configuración para el experimento se puede observar en la figura 3.17. Mediante estos resultados se ha creado una gráfica gaussiana para determinar el voltaje RMS en cada experimento. 
+Se ha optado por hacer pruebas a 12V y cargas de 7.5 OHMS, 15 OHMS y una prueba sin carga, esperando obtener el menor ruido posible. La configuración para el experimento se puede observar en la figura 3.17. Mediante estos resultados se ha creado una gráfica gaussiana para determinar el voltaje RMS en cada experimento. Para ello se implemento el siguiente codigo desarrollado en ''ROOT CERN":\\
+
+ 
+
+\begin{verbatim}
+
+#include "Riostream.h"
+#include "TH1.h"
+#include "TMath.h"
+#include "TF1.h"
+#include "TLegend.h"
+#include "TCanvas.h"
+#include <stdio.h>
+#include <stdlib.h>
+#include <cstdlib>
 
 
+void clase() {
+   ifstream in; ofstream outfile;
+   int i,j;
+   int z,suma=0;
+
+float n,time;
+double x,y,xx,yy;
+  TH1 *histo1 = new TH1F("Arrival distribution","", 50, 11.8,12.4);
+
+in.open("C1600v-4M00001.txt"); 
+
+while (1) {
+
+	if (!in.good()) break;
+       in >> x;
+       
+histo1->SetFillColor(4);
+		  histo1->Fill(x);				    
+	}
+	   
+ in.close();	  
+
+histo1->Draw();
+}
+\end{verbatim}
+
+Se han obtenido como resultado las siguientes distribuciones:
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{Capitulo3/figs/sincarga.png}
-\caption{Fuente 12V sin carga}
+\caption{Fuente 12V sin carga con error de 0.076V}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{Capitulo3/figs/75ohms.png}
-\caption{Fuente 12V con carga a 7.5 OHMS}
+\caption{Fuente 12V con carga a 7.5 OHMS con error de 0.076V}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{Capitulo3/figs/15ohms.png}
-\caption{Fuente 12V con carga a 15 OHMS}
+\caption{Fuente 12V con carga a 15 OHMS con error de 0.076V}
 \end{figure}
 
-Como observamos nuestro RMS se mantiene desde 0.0471v sin carga a 0.0546V con una carga de 7.5 ohms o 90w, obteniendo una regulación de voltaje de $\%VR=0.0627$ que significa una eficiencia del 99.93\% cuando la fuente es sometida a una carga resistiva de 90w, eficiencia bastante buena para los experimentos siguientes. 
+Como observamos nuestro RMS se mantiene desde 0.0471v sin carga a 0.0546V con una carga de 7.5 ohms o 90w, con un error asociado a el de 0.076V, ya que nuestro osciloscopio es de 8 bits, obteniendo una regulación de voltaje de $\%VR=0.0627\% $ que significa una eficiencia del 99.93\% cuando la fuente es sometida a una carga resistiva de 90w, eficiencia bastante buena para los experimentos siguientes. \\
+
+Utilizando la ecuación 2.6 obtenemos los siguientes resultados en rizo:\\
+
+ 
+ Para $12V$ sin carga: $$r=\frac{0.0741}{12.05V}X100=0.61 \% $$ 
+ 
+ Para $12V$ con carga de 7.5 ohms: $$r=\frac{0.0546V}{11.98V}X100=0.45 \% $$ 
+ 
+ Para $12V$  con carga de 15 ohms: $$r=\frac{0.02044V}{12V}X100=0.170 \% $$
+
+
 
 \subsection{Inversor de voltaje}
 
-Este modulo ha sido aislado de la misma manera que se aisló la fuente de 180W (figura 3.21), debido a los riesgos que conlleva si no se tiene el cuidado pertinente. Ahora implementando la fuente desarrollada se alimenta al inversor y se hace un arreglo similar al experimento anterior, analizando en el osciloscopio la salida sin carga, con cargas de 15 OHMS y de 7.5 OHMS, variando en este caso la frecuencia de salida en tres valores diferentes, una medición a 60 Hz, la segunda a 1 KHz y la tercera a 6 kHz.
+Este modulo ha sido aislado de la misma manera que se aisló la fuente de 180W (Fig. 3.21), debido a los riesgos que conlleva al usuario si no se tiene el cuidado pertinente. Ahora, utilizando la fuente de 180W y corriente directa se alimenta nuestro inversor. Nuestro inversor tiene dos variables que pueden ajustarse de manera manual o automática; la frecuencia y el ciclo de trabajo. Mediante estas variables de voltaje, incidentes en nuestro primario de la bobina de alto voltaje, podemos variar la salida de alto voltaje y tener un ajuste fino de nos cuantos volts por paso.\\
 
-
+Tener cargas inductivas muchas veces puede volver mas complicado la implementación de nuestros circuitos, agregando armónicos y corrientes que pueden comportarse de manera no esperada. Podemos observar en la figura 3.26 la salida de nuestro inversor agregando una carga inductiva, un ciclo de trabajo del 5\% y una frecuencia de 5 KHz. Podemos observar que nuestra señal AC mantiene su forma.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=9cm]{Capitulo3/figs/fotofuente.png}
+\includegraphics[width=9cm]{Capitulo3/figs/inversor.png}
 \caption{Implementacion experimento inversor.}
 \end{figure}
 
@@ -726,7 +387,9 @@ Este modulo ha sido aislado de la misma manera que se aisló la fuente de 180W (
 
 \subsection{Multiplicador de voltaje}
 
-Existen aspectos claves para este apartado que definirán la calidad de nuestra salida, es por ello que se han realizado pruebas variando algunos aspectos como lo son la frecuencia y el ciclo de trabajo incidente en la bobina primaria del transformador de alto voltaje. Podemos observar un circuito provisional desarrollado (figura 3.27) y mediante mediciones sin carga se observa el voltaje de salida con el osciloscopio (figura 3.24)
+Existen aspectos claves para este apartado que definirán la calidad de nuestra salida, es por ello que se han realizado pruebas variando algunos aspectos como lo son la frecuencia y el ciclo de trabajo incidente en la bobina primaria del transformador de alto voltaje. Podemos observar un circuito provisional desarrollado (figura 3.27) y mediante mediciones sin carga se han obtenido principalmente dos valores, el voltaje medio y el voltaje RMS, para obtener el rizo sobre dicha señal.
+
+
 
 \begin{figure}[H]
 \centering
@@ -737,38 +400,43 @@ Existen aspectos claves para este apartado que definirán la calidad de nuestra 
 \begin{figure}[H]
 \centering
 \includegraphics[width=9cm]{Capitulo3/figs/93V.jpg}
-\caption{Medición sin carga a 93v}
+\caption{Medición sin carga a 93v con un error de 0.36V}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=9cm]{Capitulo3/figs/200V.jpg}
-\caption{Medición sin carga a 200V}
+\caption{Medición sin carga a 200V con un error de 0.78V}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=9cm]{Capitulo3/figs/600v.jpg}
-\caption{Medición sin carga a 600V}
+\caption{Medición sin carga a 600V con un error de 2.34V}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=9cm]{Capitulo3/figs/986V.jpg}
-\caption{Medición sin carga a 986V}
+\caption{Medición sin carga a 986V con un error de 3.85V}
 \end{figure}
 
-A partir de estas mediciones podemos calcular el rizo que tiene nuestra medición utilizando la ecuación 2.4 como podemos observar en las figuras 3.28, 3.29, 3.30 y 3.31  respectivamente. \\Para la medicion a $93V$ tenemos: $$r=\frac{4.157V}{94.79V}=0.043$$ Para $200V$: $$r=\frac{0.00027V}{200V}=1.35\mu $$ Para 600v:  $$r=\frac{0.001115V}{600V}=1.85\mu $$ Para 1000V  $$r=\frac{0.002435V}{986V}=2.467\mu $$
+A partir de estas mediciones podemos calcular el rizo que tiene nuestra medición utilizando la ecuación 2.4 como podemos observar en las figuras 3.28, 3.29, 3.30 y 3.31  respectivamente. \\
 
-El segundo experimento que se realizo fue agregar una carga de $1M\Omega$ para obtener la eficiencia de la misma, valor calculado con la ecuación 2.7. \\
+Para la medición a $93V$ tenemos:
 
-Para $93V$: $$\%VR=\frac{V_{NL}-V_{FL}}{V_{FL}}=\frac{94.79V-94.77V}{94.77V}= 2.11x10^{-4}$$
+ $$r=\frac{4.157V}{94.79V}X100=4.3 \% $$ 
+ 
+ Para $200V$: $$r=\frac{0.00027V}{200V}X100=135\mu \% $$ 
+ 
+ Para $600v:$  $$r=\frac{0.001115V}{600V}X100=185\mu \% $$ 
+ 
+ Para $1000V$  $$r=\frac{0.002435V}{986V}X100=246.7\mu \% $$
 
-Para $200V$: $$\%VR=\frac{V_{NL}-V_{FL}}{V_{FL}}=\frac{200V-199.96V}{199.96V}= 2x10^{-4}$$
+El segundo experimento que se realizo fue agregar una carga de $4M\Omega$ para obtener la eficiencia de la misma, valor calculado con la ecuación 2.7. \\
 
-Para $600V$: $$\%VR=\frac{V_{NL}-V_{FL}}{V_{FL}}=\frac{600V-599.93V}{599.93V}= 1.16x10^{-4}$$
+Para $93V$ $V_{NL}=186V$ y $V_{FL}=100V$: $$\%VR=\frac{V_{NL}-V_{FL}}{V_{FL}}=\frac{186V-100V}{186V}X100= 86 \% $$
 
-Para $986V$: $$\%VR=\frac{V_{NL}-V_{FL}}{V_{FL}}=\frac{986.7V-986.6V}{986.6V}= 1.01x10^{-4}$$
+Para $300V$ $V_{NL}=577V$ y $V_{FL}=300V$ : $$\%VR=\frac{V_{NL}-V_{FL}}{V_{FL}}X100=\frac{577V-300V}{300V}X100= 92\% $$
 
-Los valores importantes para definir la eficiencia de una fuente son el rizo que existe sobre el voltaje de corriente directa y la caida de voltaje con una carga respectiva. 
-
+Los valores importantes para definir la eficiencia de una fuente son el rizo que existe sobre el voltaje de corriente directa y la caída de voltaje con una carga respectiva. En nuestro caso se tienen caídas de voltaje de hasta el 92\%, debido a que no se cuenta con una retroalimentación necesaria. 
